--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "axios": "^0.21.0",
     "core-js": "^3.6.5",
     "element-ui": "^2.4.5",
+    "lodash": "^4.17.20",
     "vue": "^2.6.11",
-    "vue-router": "^3.2.0"
+    "vue-quill-editor": "^3.0.6",
+    "vue-router": "^3.2.0",
+    "vue-table-with-tree-grid": "^0.2.4"
   },
   "devDependencies": {
     "@babel/plugin-transform-regenerator": "^7.12.1",
@@ -32,6 +35,7 @@
     "eslint-plugin-vue": "^6.2.2",
     "less": "^3.12.2",
     "less-loader": "^7.0.2",
+    "vue-cli-plugin-editorconfig": "^0.2.1",
     "vue-cli-plugin-element": "^1.0.1",
     "vue-template-compiler": "^2.6.11"
   }
